--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:ts": "eslint 'src/**/*.{ts,tsx}'",
-    "lint:ts:fix": "eslint 'src/**/*.{ts,tsx}' --fix"
+    "lint:ts": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:ts:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +30,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.53.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-i18next": "^6.0.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
@@ -43,6 +46,8 @@
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
