--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
       "module": "CommonJS",
     }
   },
-  "include": [".eslintrc.js", "**/*","!node_modules"],
+  "include": [".eslintrc.js", "**/*","!node_modules","./config/jest/setupTests.ts"],
 }
